--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,21 @@
   100% { color: red; }
 }
 
+@-webkit-keyframes color-change-I {
+  0% { color: red; }
+  33% { color: lightskyblue; }
+  66% { color: yellow; }
+  100% { color: red; }
+}
+
 @keyframes color-change-F {
+  0% { color: violet; }
+  33% { color: green; }
+  66% { color: yellow; }
+  100% { color: violet; }
+}
+
+@-webkit-keyframes color-change-F {
   0% { color: violet; }
   33% { color: green; }
   66% { color: yellow; }
@@ -60,6 +74,14 @@
   100% { color: yellow; }
 }
 
+@-webkit-keyframes color-change-R {
+  0% { color: yellow; }
+  33% { color: blue; }
+  66% { color: pink; }
+  100% { color: yellow; }
+}
+
+
 @keyframes color-change-E {
   0% { color: green; }
   33% { color: lightskyblue; }
@@ -67,4 +89,11 @@
   100% { color: green; }
 }
 
-  
+@-webkit-keyframes color-change-E {
+  0% { color: green; }
+  33% { color: lightskyblue; }
+  66% { color: darkorange; }
+  100% { color: green; }
+}
+
+
